# right-angled-polyhedral-zoo

./: 1.orb  aL6.orb  aL7.orb  pyproject.toml
gxl/: Dodecahedron.gxl
hyperhedron/: __init__.py  angles.py  batch.py  combinatorial.py  exceptions.py  linalg.py  make.py  newton.py  objective.py  polyhedron.py  primitive.py  whitehead.py
hyperhedron/io/: gxl.py  off.py  orb.py
hyperhedron/web/: app.py
hyperhedron/web/static/: index.html  main.js
tests/: test_batch.py  test_combinatorial.py  test_linalg.py  test_newton.py  test_objective.py  test_orb.py  test_web.py
